# django-wildewidgets

./: .autoenv  .autoenv.leave  .bumpversion.cfg  .gitignore  .readthedocs.yaml  AGENTS.md  LICENSE.txt  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
demo/: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  manage.py  pyproject.toml  requirements.txt  setup.py
demo/demo/: __init__.py  gunicorn_config.py  settings.py  settings_docker.py  urls.py  wsgi.py
demo/demo/core/: __init__.py  admin.py  apps.py  forms.py  jobs.py  models.py  urls.py  views.py  wildewidgets.py
demo/demo/core/fixtures/: book_manager.json  measurements.json  users.json
demo/demo/core/migrations/: 0001_initial.py  0002_initial_data.py
demo/demo/core/templates/core/: intermediate.html
demo/demo/users/: __init__.py  apps.py  models.py
demo/demo/users/fixtures/: users.json
demo/demo/users/migrations/: 0001_initial.py  0002_load_fixture.py
demo/demo/users/templates/registration/: login.html
demo/demo/users/templates/users/: intermediate.html
demo/etc/: environment.txt  gunicorn_logging.conf  ipython_config.py  nginx.conf  supervisord.conf
demo/sql/docker/: init.sql  my.cnf
docs/: Makefile  api.rst  api_base.rst  api_buttons.rst  api_charts.rst  api_datagrid.rst  api_forms.rst  api_grid.rst  api_headers.rst  api_icons.rst  api_layout.rst  api_menus.rst  api_misc.rst  api_modals.rst  api_navigation.rst  api_structure.rst  api_tables.rst  api_text.rst  api_views.rst  business_charts.rst  charts.rst  conf.py  guide.rst  index.rst  install.rst  requirements.txt  scientific_charts.rst  tables.rst  widgets.rst
docs/_static/: wildewidgets_dark_mode_logo.pxd  wildewidgets_logo.pxd
wildewidgets/: __init__.py  apexcharts.py  apps.py  forms.py  menus.py  models.py  tables.py  tests.py  ui.py  views.py  viewsets.py  wildewidgets.py
wildewidgets/static/css/: table_extra.css
wildewidgets/static/js/: cheetahcharts.js
wildewidgets/static/wildewidgets/css/: _navbar.scss  _toggleablemanytomanyfieldblock.scss  _widget-index.scss  _widget-list.scss  highlighting.css  table_extra.css  wildewidgets.css  wildewidgets.scss
wildewidgets/static/wildewidgets/js/: wildewidgets.js
wildewidgets/templates/cheetahcharts/: altairchart.html  doughnutchart.html  doughnutchart_json.html  stackedbarchart_json.html  table.html
wildewidgets/templates/wildewidgets/: apex_chart.html  apex_json.html  barchart.html  block--simple.html  block.html  breadcrumb_block.html  button--form.html  card.html  card_block.html  categorychart.html  code_widget.html  crispy_form_modal.html  crispy_form_widget.html  form_button.html  gravatar.html  header_with_collapse_button.html  header_with_controls.html  header_with_link_button.html  header_with_modal_button.html  header_with_widget.html  html_list.html  html_widget.html  initials_avatar.html  link_button.html  markdown_widget.html  menu.html  modal.html  offcanvas.html  page_tab_block.html  paged_model_widget.html  stackedbarchart.html  tab_block.html  tabbed_widget.html  table.html  widget-list--main.html  widget-list--sidebar.html  widget-list.html  widget_index.html  widget_stream.html
wildewidgets/templatetags/: wildewidgets.py
wildewidgets/views/: __init__.py  generic.py  json.py  mixins.py  permission.py  tables.py
wildewidgets/widgets/: __init__.py  base.py  buttons.py  datagrid.py  forms.py  grid.py  headers.py  icons.py  layout.py  misc.py  modals.py  navigation.py  structure.py  tables.py  text.py
wildewidgets/widgets/charts/: __init__.py  altair.py  apex.py  chartjs.py
wildewidgets/widgets/tables/: __init__.py  actions.py  base.py  components.py  static.py  tables.py  views.py
