[project]
name = "wildewidgets-demo"
version = "1.2.5"
description = "Cheetah Demo - Django application demonstrating django-wildewidgets"
readme = "README.md"
requires-python = ">=3.14"
authors = [
    {name = "Caltech IMSS ADS", email = "imss-ads-staff@caltech.edu"}
]
dependencies = [
    # Django and third-party apps
    "Django ~= 5.0",
    "django-autocomplete-light >= 3.5.1",
    "django-braces >= 1.14.0",
    "django-compressor >= 4.6.0",
    "django-crequest >= 2018.5.11",
    "django-crispy-forms >= 2.4",
    "crispy-bootstrap5 >= 2025.6",
    "django-environ >= 0.4.5",
    "django-js-reverse >= 0.9.1",
    "django-markdownify >= 0.9.2",
    "django-redis >= 4.11.0",
    "django-storages >= 1.14.4",
    "django-xff >= 1.3.0",
    "django-chartjs >= 2.2.1",
    "django-theme-academy >= 0.3.2",
    "django-book-manager >= 0.3.2",
    "django-wildewidgets >= 1.2.5",
    # Other utils
    "bleach >= 5.0.1",
    "altair >= 5.5.0",
    "pandas >= 2.3.1",
    "crython >= 0.2.0",
    "ipython >= 8.6.0",
    "mysqlclient >= 2.1.1",
    "pytz >= 2022.6",
    "structlog >= 22.2.0",
    # SASS Processing
    "django-sass-processor >= 1.4.1",
    "libsass >= 0.22.0",
    # Web server
    "gunicorn >= 20.1.0",
    # Deployment
    "bumpversion >= 0.6.0",
]

# [dependency-groups]
# dev = [
#     "django-debug-toolbar >= 2.2",
#     "django-debug-toolbar-template-profiler >= 2.0.1",
#     "django-queryinspect >= 1.1.0",
#     "django-extensions >= 2.2.9",
#     "autopep8 >= 1.5",
#     "flake8 >= 3.7.9",
#     "pycodestyle >= 2.5.0",
# ]
# test = [
#     "coverage >= 5.0.3",
#     "django-coverage-plugin >= 1.8.0",
#     "factory-boy >= 2.12.0",
#     "mypy >= 0.701",
#     "testfixtures >= 6.14.0",
# ]

[build-system]
requires = [
    "setuptools >= 48",
    "wheel >= 0.29.0",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]

[tool.uv]
python-preference = "only-system"

[tool.mypy]
exclude = "(^build/.*$|^docs/.*\\.py$|test_.*\\.py$)"
disable_error_code = ["attr-defined"]

[[tool.mypy.overrides]]
module = "django.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "setuptools.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "redis.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "dal.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "braces.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "environ.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "debug_toolbar.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "structlog.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "django_extensions.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "bleach.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "altair.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pandas.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "chartjs.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "book_manager.*"
ignore_missing_imports = true

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py310"
src = ["demo"]
exclude = [".venv", "build", "dist", "*/tests*", "*/migrations/*"]

[tool.ruff.lint]
select = ["ALL"]
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
ignore = [
    #### modules
    "ANN", # flake8-annotations
    "COM", # flake8-commas
    "C90", # mccabe complexity
    "TID", # flake8-tidy-imports
    #### specific rules
    "CPY001",   # ignore missing copyright notices
    "D100",     # Missing docstring in public module
    "D102",     # Missing docstring in public method
    "D103",     # Missing docstring in public function
    "D104",     # Missing docstring in public package
    "D105",     # Missing docstring in magic method
    "D106",     # Missing docstring in nested class
    "D107",     # ignore Missing docstring in __init__ method
    "D200",     # One-line docstring should fit on one line
    "D203",     # 1 blank required before class docstring
    "D205",     # 1 blank line required between summary line and description
    "D211",     # No blank lines allowed before class docstring
    "D212",     # Multi-line docstring summary should start at the first line
    "D400",     # First line should end with a period
    "D401",     # First line of docstring should be in imperative mood
    "D415",     # First line should end with a period, question mark, or exclamation point
    "DOC201",   # Ignore missing "Return" section in docstring
    "E402",     # false positives for local imports
    "FIX002",   # Line contains "TODO", consider resolving the issue
    "N818",     # stop bugging me about not ending my exceptions with "Error"
    "PLC0415",  # Ignore imports that aren't at the top level. Sometimes that's needed to avoid circular imports.
    "S603",     # ignore subprocess calls that do not check return code
    "S607",     # ignore subprocess programs that are not absolute paths
    "SIM102",   # combine nested ifs
    "SLF001",   # Ignore access to attributes starting with a single _. Django's Model._meta is used all over the place.
    "TD002",    # Missing author in TODO; try: # TODO(<author_name>): ... or # TODO @<author_name>:
    "TD003",    # Missing issue link on the line following this TODO
    "FBT001",   # stop bugging me about booleans in function signatures
    "FBT002",   # stop bugging me about booleans in function signatures
    "PT009",    # use regular assert instead of unittest asserts
]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"
# Like Black, indent with spaces, rather than tabs.
indent-style = "space"
# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false
# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"
# Disable auto-formatting of code examples in docstrings
docstring-code-format = false
# Set the line length limit used when formatting code snippets in
# docstrings.
docstring-code-line-length = "dynamic"

[tool.ruff.lint.pylint]
max-args = 10
max-positional-args = 10
